Refactor BloodHound collectors to match SharpHound v5 format
- Removed trusts.json collector (trusts are part of domains object in SharpHound)
- Updated all struct definitions to match SharpHound schema exactly
- BHUser/BHComputer: Removed IsACLProtected field (only in raw output)
- BHComputer: Added collection result objects (LocalAdmins, PSRemoteUsers, etc)
- BHDomain: Added Trusts, Links, ChildObjects, GPOChanges fields
- BHGroup: Updated Members to use ObjectIdentifier instead of ObjectId
- Fixed field names: ObjectIdentifier vs ObjectId for all types
- Implemented trust collection within domain object
- Properly handle metadata: methods: 0, type, count, version: 5
- Metadata format now matches BloodHound import expectations
- All 6 collectors (users, computers, groups, domains, ous, gpos) now generate valid output

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,25 @@
-.vscode
+.vscode/
 .exe
-local
+.dll
+.so
+.dylib
+local/
+test/
 .pfx
 .ccache
-.json
-.zip
+*.json
+*.zip
+*.out
+ldaptickler
+output.*
+
+# IDE
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+*.pfx
